[gd_scene load_steps=11 format=3 uid="uid://bjphbghinurfr"]

[ext_resource type="Theme" uid="uid://cgfdgl4ihd081" path="res://assets/themes/td_theme.tres" id="1_d4ywp"]
[ext_resource type="Script" path="res://interfaces/UI/turret_popup/turret_popup.gd" id="2_hlo1n"]
[ext_resource type="Texture2D" uid="uid://dyoxd2r3d7q3g" path="res://interfaces/UI/turret_popup/assets/textures/turret_gatling_icon.png" id="4_1pplw"]
[ext_resource type="Texture2D" uid="uid://dst6k2hllrnby" path="res://interfaces/assets/textures/red_circle_cross.png" id="4_x5xtb"]
[ext_resource type="Texture2D" uid="uid://clvlwewuxqgme" path="res://interfaces/UI/turret_popup/assets/textures/turret_single_icon.png" id="5_hubt0"]
[ext_resource type="Texture2D" uid="uid://biesj6lcvfs0b" path="res://interfaces/UI/turret_popup/assets/textures/turret_missile_icon.png" id="6_khrde"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xfjc7"]
modulate_color = Color(0.964706, 0.964706, 0.964706, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2ssdq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7fftr"]

[sub_resource type="ButtonGroup" id="ButtonGroup_jhmro"]

[node name="TurretPopup" type="CanvasLayer"]
script = ExtResource("2_hlo1n")

[node name="Background" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="Background"]
modulate = Color(1, 1, 1, 0.843137)
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -301.0
offset_top = -185.0
offset_right = 301.0
offset_bottom = 185.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_d4ywp")
metadata/_edit_layout_mode = 1

[node name="Close" type="Button" parent="Background/Panel"]
anchor_left = 1.0
anchor_right = 1.0
offset_left = -32.0
offset_top = -2.0
offset_right = 17.0
offset_bottom = 47.0
grow_horizontal = 0
pivot_offset = Vector2(24.5, 24.5)
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxTexture_xfjc7")
theme_override_styles/hover = SubResource("StyleBoxTexture_2ssdq")
theme_override_styles/pressed = SubResource("StyleBoxTexture_2ssdq")
theme_override_styles/focus = SubResource("StyleBoxEmpty_7fftr")
icon = ExtResource("4_x5xtb")
icon_alignment = 1
metadata/_edit_layout_mode = 1

[node name="Turrets" type="HBoxContainer" parent="Background/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -233.0
offset_top = -101.0
offset_right = 233.0
offset_bottom = 101.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
metadata/_edit_layout_mode = 1

[node name="Gatling" type="HFlowContainer" parent="Background/Panel/Turrets"]
offset_top = 1.0
offset_right = 164.0
offset_bottom = 201.0
size_flags_vertical = 4
theme_override_constants/v_separation = 10

[node name="Button" type="Button" parent="Background/Panel/Turrets/Gatling"]
offset_right = 164.0
offset_bottom = 136.0
button_group = SubResource("ButtonGroup_jhmro")
icon = ExtResource("4_1pplw")
icon_alignment = 1

[node name="Label" type="Label" parent="Background/Panel/Turrets/Gatling"]
offset_top = 146.0
offset_right = 164.0
offset_bottom = 200.0
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 32
text = "200"
horizontal_alignment = 1

[node name="Single" type="HFlowContainer" parent="Background/Panel/Turrets"]
offset_left = 174.0
offset_top = 1.0
offset_right = 338.0
offset_bottom = 201.0
size_flags_vertical = 4
theme_override_constants/v_separation = 10

[node name="Button" type="Button" parent="Background/Panel/Turrets/Single"]
offset_right = 164.0
offset_bottom = 136.0
button_group = SubResource("ButtonGroup_jhmro")
icon = ExtResource("5_hubt0")
icon_alignment = 1

[node name="Label" type="Label" parent="Background/Panel/Turrets/Single"]
offset_top = 146.0
offset_right = 164.0
offset_bottom = 200.0
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 32
text = "500"
horizontal_alignment = 1

[node name="Missile" type="HFlowContainer" parent="Background/Panel/Turrets"]
offset_left = 348.0
offset_top = 1.0
offset_right = 512.0
offset_bottom = 201.0
size_flags_vertical = 4
theme_override_constants/v_separation = 10

[node name="Button" type="Button" parent="Background/Panel/Turrets/Missile"]
offset_right = 164.0
offset_bottom = 136.0
button_group = SubResource("ButtonGroup_jhmro")
icon = ExtResource("6_khrde")
icon_alignment = 1

[node name="Label" type="Label" parent="Background/Panel/Turrets/Missile"]
offset_top = 146.0
offset_right = 164.0
offset_bottom = 200.0
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 32
text = "1000"
horizontal_alignment = 1

[connection signal="gui_input" from="Background" to="." method="_on_background_gui_input"]
[connection signal="pressed" from="Background/Panel/Close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="Background/Panel/Turrets/Gatling/Button" to="." method="_on_button_pressed" binds= ["gatling"]]
[connection signal="pressed" from="Background/Panel/Turrets/Single/Button" to="." method="_on_button_pressed" binds= ["single"]]
[connection signal="pressed" from="Background/Panel/Turrets/Missile/Button" to="." method="_on_button_pressed" binds= ["missile"]]
